@@ -45,6 +45,7 @@
   (UNSPEC_GOT		2)
   (UNSPEC_GOTOFF	3)
   (UNSPEC_PLT		4)
+  (UNSPEC_GOTSYM_OFF	5)
 ])
 
 (include "predicates.md")
@@ -2619,18 +2620,9 @@
   [(set (reg:SI PIC_REG)
 	(plus:SI
 	 (reg:SI PIC_REG)
-	 (const
-	  (unspec [(minus:SI
-		    (match_dup 1)
-		    (const (minus:SI
-			    (const (match_operand:SI 0 "" ""))
-			    (pc))))
-		  ] UNSPEC_PIC))))]
-  ""
-  "
-{
-  operands[1] = gen_rtx_SYMBOL_REF (VOIDmode, GOT_SYMBOL_NAME);
-}")
+	 (const:SI
+	  (unspec:SI [(match_operand:SI 0 "" "")] UNSPEC_GOTSYM_OFF))))]
+  "")
 
 (define_expand "symGOT2reg"
   [(match_operand:SI 0 "" "")
